_includes/css/layout.css
/* layouts */

hr {
  border: none;
  height: 0.12em;
  border-top: 0.12em solid var(--color-fg);
  border-bottom: 0.2em solid var(--color-fg);
}

nav > ul,
nav > ul > li {
  margin: 0;
  padding-left: 0;
  padding-right: 0.5em;
  display: inline;
  /* line-height: 0%; */
}

ul,
li {
  all: none;
}

content {
  display: flex;
  justify-content: center;
}

article {
  width: 800px;
}

@media (min-width: 1200px) {
  article {
    width: 60%;
  }
}

#title {
  text-decoration-color: var(--color-fg);
}

